# gimei-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
gimei/: Cargo.toml
gimei/examples/: address.rs  derive.rs  name.rs  usage.rs
gimei/src/: address.rs  gender.rs  lib.rs  name.rs
gimei_derive/: Cargo.toml
gimei_derive/src/: lib.rs
